<resources>
    <string name="app_name">MultimediaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Choose Action</string>
    <string name="nav_header_subtitle">Multimedia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_video">Video</string>
    <string name="menu_voice">Voice Recording</string>
    <string name="menu_share">Share App</string>
    <string name="menu_contact">Contact Us</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
